편의점 프로젝트 1

--- a/3_편의점프로젝트_1.md
+++ b/3_편의점프로젝트_1.md
@@ -41,8 +41,10 @@ public class AppConfig {
 
 
 ### Web 영역
-- ItemController  
-스프링 MVC는 @Controller로 표시된 클래스를 스프링 빈으로 인식하여 요청을 처리합니다. 따라서 컨트롤러가 빈으로 등록되지 않으면 해당 URL에 대한 요청을 처리할 수 없습니다.  
+- ItemController 
+원하는 기능 : 아이템 전체 목록, 아이템 등록
+
+> ItemController에서 ItemService를 주입받아 사용해야 한다!!
 
 `수동 빈 등록`
 ```Java
@@ -51,6 +53,44 @@ public class AppConfig {
         return new ItemController(itemService());
     }
 ```
+그런데, 실행해봤더니 url을 치고 들어가도 response가 안온다.??   
+--> @Controller는 단순히 @Component(자동 빈 등록, 추후에 설명)를 포함하는 것을 넘어서, 스프링에게 클라이언트의 요청을 이쪽으로 보내게끔 유도함.  
+==> 스프링 MVC는 @Controller로 표시된 클래스를 스프링 빈으로 인식하여 요청을 처리합니다. 따라서 컨트롤러가 빈으로 등록되지 않으면 해당 URL에 대한 요청을 처리할 수 없습니다.  
 
-> ItemController에서 ItemService를 주입받아 사용해야 한다!!
 
+* 요청(Get, Post)을 매핑하자
+
+```Java
+@GetMapping("/list")
+    public String list(Model model) {
+        List<Item> items = itemService.findAllItems();
+        model.addAttribute("items", items);
+        return "list";
+    }
+
+    @GetMapping("/add")
+    public String addForm() {
+        return "addform";
+    }
+
+    @PostMapping("/add")
+    public String add(
+            @RequestParam("name") String name,
+            @RequestParam("price") Integer price
+    ) {
+        itemService.addItem(name, price);
+        return "redirect:list";
+    }
+```
+
+* 뷰를 만들자(thymeleaf 템플릿 사용)
+
+
+
+### 요약
+ 
+entity : 필드, 생성자, getter&setter 수동으로 모두 작성.  
+repository : DB(현재는 메모리..)와 직접 컨택하는 부분. 인터페이스로 핵심 기능을 선언한 후, DB 기술에 맞게 구현.  
+service : repository를 주입받아 사용(중요!!!). 프로젝트의 핵심 비즈니스 로직.  
+controller : service를 주입받아 사용(중요!!!). 클라이언트의 HTTP 요청을 받은 후, 처리해서 뷰를 리턴.  
+(만약 json 등 api 서버로 사용할 경우, @RestController를 사용)
