--- a/1_스프링_시작.md
+++ b/1_스프링_시작.md
@@ -1,13 +1,60 @@
 # 1. 스프링 시작
 
-### 1-1. 웹 서비스는 무엇인가
+### 1-1. HTTP 특징
+- 서버와 클라이언트 간 통신
+- Stateless
+- Connectionless
 
 ### 1-2. 역할 분담: 백엔드와 프론트엔드
+`백엔드(Backend)`  
+  
+백엔드는 사용자가 직접적으로 보지 못하는 서버 측의 소프트웨어와 기능을 담당합니다.  
+데이터베이스, 서버, 애플리케이션, 비즈니스 로직 등을 처리합니다.  
+주로 데이터의 저장, 처리, 관리, 사용자 인증, 보안 등과 같은 백엔드 기능을 수행합니다.  
+백엔드는 주로 서버 사이드 언어(Java, Python, Ruby, Node.js 등)를 사용하여 개발됩니다.  
+백엔드는 데이터의 가공, 유지 관리, 보안 등과 같은 기능을 담당하며, 주로 API를 통해 프론트엔드와 통신합니다.  
+  
+`프론트엔드(Frontend)`  
 
-### 1-3. 정적인 웹(WS)
+프론트엔드는 사용자가 직접적으로 상호작용하는 부분을 담당합니다. 즉, 사용자가 볼 수 있는 UI(User Interface)와 UX(User Experience)를 개발하는 것입니다.  
+웹 애플리케이션의 경우 HTML, CSS, JavaScript 등을 사용하여 웹 페이지를 구성하고 사용자와 상호작용합니다.  
+모바일 애플리케이션의 경우 안드로이드에서는 Kotlin 또는 Java, iOS에서는 Swift 또는 Objective-C를 사용하여 UI를 개발합니다.  
+프론트엔드는 사용자 인터페이스 디자인, 사용자 경험 설계, 웹 페이지의 시각적 표현 및 동작을 담당합니다.  
 
-### 1-4. 동적인 웹(WAS)
+### 1-3. 정적인 웹(WS)과 동적인 웹(WAS)
 
-### 1-5. 최선의 선택 - 스프링
+`정적인 웹 (웹 서버)`  
 
-### 1-6. 스프링 구조
+정적인 웹은 웹 서버가 사전에 작성된 HTML 파일, 이미지, CSS, JavaScript 등을 사용자에게 직접 제공하는 방식입니다.
+클라이언트가 요청을 보내면, 웹 서버는 요청된 파일을 그대로 반환하여 응답합니다. 이러한 파일은 서버에서 미리 준비되어 있으므로, 요청 시간에 동적으로 변경되지 않습니다.
+주로 정적인 웹은 소규모 웹 사이트나 정적 컨텐츠를 제공하는 경우에 사용됩니다.
+대표적인 웹 서버로는 Apache, Nginx 등이 있습니다.  
+  
+`동적인 웹 (웹 애플리케이션 서버)`  
+
+동적인 웹은 사용자 요청에 따라 서버 측에서 콘텐츠를 생성하고 제공하는 방식입니다.
+클라이언트가 요청을 보내면, 서버는 요청을 처리하고 데이터베이스 조회, 비즈니스 로직 실행 등을 통해 동적으로 HTML 페이지를 생성하여 반환합니다.
+이러한 방식은 개인화된 콘텐츠, 상호작용 가능한 기능 등을 제공하는 데 유용합니다.
+동적인 웹 애플리케이션을 구축하기 위해서는 웹 애플리케이션 서버와 프로그래밍 언어(Java, Python, PHP 등)를 사용하여 서버 측 로직을 구현해야 합니다.
+대표적인 웹 애플리케이션 서버로는 Apache Tomcat, Jetty, Microsoft IIS 등이 있습니다.
+
+### 1-4. 최선의 선택 - 스프링
+
+풍부한 기능과 모듈화: 스프링 프레임워크는 다양한 기능과 모듈을 제공하여 백엔드 애플리케이션을 빠르고 효율적으로 개발할 수 있습니다. 예를 들어, 스프링 MVC를 사용하여 웹 애플리케이션을 구축하거나, 스프링 데이터를 사용하여 데이터베이스 액세스를 관리할 수 있습니다. 또한 스프링 시큐리티를 사용하여 인증 및 권한 부여를 처리할 수 있습니다.
+
+DI (의존성 주입)와 IOC (제어의 역전) 컨테이너: 스프링은 의존성 주입과 제어의 역전을 지원하는 IoC 컨테이너를 제공합니다. 이를 통해 개발자는 코드 간의 결합도를 낮추고 유연하고 테스트 가능한 코드를 작성할 수 있습니다.
+
+AOP (관점 지향 프로그래밍) 지원: 스프링은 관점 지향 프로그래밍을 지원하여 여러 모듈 간의 공통 관심 사항을 분리할 수 있습니다. 이를 통해 코드 중복을 줄이고 응집도를 높일 수 있습니다.
+
+트랜잭션 관리: 스프링은 트랜잭션 관리를 지원하여 데이터베이스 작업을 안전하게 수행할 수 있습니다. 스프링의 선언적 트랜잭션 관리를 사용하면 트랜잭션을 더 쉽게 구성하고 관리할 수 있습니다.
+
+테스트 용이성: 스프링은 단위 테스트, 통합 테스트 및 기능 테스트를 지원하는 다양한 테스트 지원을 제공합니다. 모의 객체와 테스트 프레임워크를 사용하여 애플리케이션을 테스트하고 안정성을 확보할 수 있습니다.
+
+커뮤니티와 생태계: 스프링은 활발한 커뮤니티와 다양한 생태계를 가지고 있습니다. 이를 통해 문제를 해결하고 지속적인 개선 및 업데이트를 받을 수 있습니다.
+
+
+### 1-5. 스프링 구조
+
+스프링 컨테이너, 스프링 웹, 스프링 데이터...
+
+https://docs.spring.io/spring-framework/docs/4.0.x/spring-framework-reference/html/overview.html
