--- a/2_스프링_핵심.md
+++ b/2_스프링_핵심.md
@@ -1,8 +1,18 @@
 # 2. 스프링 핵심
 
-### 제어의 역전(IoC)
-
 ### 의존관계 주입(DI)
+
+말 그대로 의존 관계를 주입하는 것인데, 이 의존 관계를 객체(구현체)의 외부에서 결정해주는 것을 의미합니다. 그러니깐 구현체에 대한 코드를 바깥에서 넣어주도록 설정해서 현재 구현체에서는 모르게 하는(의존하지 않도록 하는) 것이라고 볼 수 있습니다.
+
+### 제어의 역전(IoC)
+제어의 역전은 스프링에만 국한된 단어가 아니라 일반적인 개발자가 모든 것을 제어(control)하는 흐름에서 벗어나 내가 호출하는 것이 아니라 프레임워크 같은 것이 대신 호출해 주는 구조를 의미합니다. (한 마디로 제어에 대한 권한이 뒤바뀌는 것을 의미한다고)
+
+기존의 프로그램은 클라이언트 구현 객체가 스스로 필요한 서버 구현 객체를 생성하고, 연결하고 실행하는 구조를 따랐습니다. 한 마디로 구현 객체가 프로그램의 제어 흐름을 스스로 조종하는 구조이며 개발자의 입장에서는 자연스러운 흐름이었죠
+
+그런데, 지난번 DI에 대한 정리글에서 설명한 AppConfig가 의존 관계를 주입하는 등의 역할을 가져감으로써, 프로그램에 대한 제어의 흐름을 가져간 바가 있습니다.
+
+이렇게 각각의 구현체들은 자신들의 기능 수행에 집중하고, 제어의 흐름을 직접 제어하는 것이 아니라 외부에서 관리하는 것을 제어의 역전(IoC)라고 할 수 있습니다.
+
 
 ### 빈과 싱글톤
 - 빈이란 무엇인가
@@ -13,10 +23,8 @@
   3. ....
 
 - 스프링은 빈을 싱글톤으로 관리한다!
- 스프링 컨테이너는 싱글톤 패턴을 따로 적용하지 않아도, 객체 인스턴스를 싱글톤으로 관리해 준다.
+ 스프링 컨테이너(DI 컨테이너)는 싱글톤 패턴을 따로 적용하지 않아도, 객체 인스턴스를 싱글톤으로 관리해 준다.
 
 ### 스프링 컨테이너와 빈
 - 빈 수동 등록 (Configuration.class)
 - 빈 자동 등록(@Component, @Service, ...)
-
-
