편의점 프로젝트 3 - 완성

--- a/5_편의점프로젝트_3.md
+++ b/5_편의점프로젝트_3.md
@@ -1,22 +1,62 @@
 # 5. 편의점 프로젝트 3
-> 목표 : 로그인&회원가입 기능 완성
+> 목표 : 로그인&회원가입 총괄 기능 완성  
+> (로그인, 회원가입, 비밀번호 수정, 회원탈퇴, 로그아웃)
 
 ### 홈 만들기
-`HomeController`  
+* HomeController 만들기
 `home.html`
+> 구조 :  홈 화면 -> item list  
+> item list 는 로그인을 해야만 들어갈 수 있게
 
-### 회원가입 도입
+### 회원가입 만들기
 
 #### 회원 도메인 만들기
 > 로그인을 만들려면, 우선 회원가입부터 만들어야 함.  
-> 회원가입을 만들려면, 회원을 저장할 수 있어야 함...
+> 회원가입을 만들려면, 우선 회원을 저장할 수 있어야 함...
 
-* validation 추가  (build.gradle)   
-  ```implementation 'org.springframework.boot:spring-boot-starter-validation'```
+
 * Member 엔티티 만들기
 * MemberRepository (인터페이스) 만들기
 * MemoryMemberRepository (구현체) 만들기
 * MemberService 만들기
+  
+* MemberJoinForm 만들기 (회원가입용 DTO)
+* MemberUpdateForm 만들기 (비밀번호 수정용 DTO)
+* MemberController 만들기
+* > @ModelAttribute 복습하기!!!!!
 
-HttpSession을 삭제할 때 invalidate()와 removeAttribute()의 차이점
+
+
+
+### 로그인 만들기
+> 세션 도입해야 함
+> 쿠키와 세션의 공통점과 차이점?
+> HttpSession을 삭제할 때 invalidate()와 removeAttribute()의 차이점:
 https://treecode.tistory.com/106
+
+* LoginService 만들기
+* LoginForm 만들기 (로그인용 DTO)
+* LoginController 만들기
+
+로그인 이전 홈과 로그인된 홈을 구분지어야 함. --> 홈 View 를 2개로 나누기
+
+
+### 검증 (Validation)
+* validation 추가  (build.gradle)   
+  ```implementation 'org.springframework.boot:spring-boot-starter-validation'```
+* 엔티티에 검증용 어노테이션 추가 ( @NotEmpty )
+* 객체 검증 : @Valid, @Validated
+* BindingResult 는 무엇인가, BindingResult 사용
+* > reject(), rejectValue()
+* bindingResult를 뷰 단에서 받아서 처리하기
+* > #fields.hasGlobalErrors(), #fields.hasErrors('필드명') --> th:if 와 함께 사용
+
+### 로그인 체크
+* LoginCheckInterceptor
+* WebConfig -> @Configuration (인터셉터 등록)
+* 로그인 안한 초기 상태에서 로그인이 필요한 URI 에 접속했을 때, 로그인 창으로 튕겼다가
+다시 초기 상태로 갈 수 있도록 하기 : `@RequestParam(defaultValue="/") String redirectURL`
+
+
+### 뷰 완성하기
+열심히 만들어 봅시다...
