--- a/1_스프링_시작.md
+++ b/1_스프링_시작.md
@@ -38,6 +38,14 @@
 동적인 웹 애플리케이션을 구축하기 위해서는 웹 애플리케이션 서버와 프로그래밍 언어(Java, Python, PHP 등)를 사용하여 서버 측 로직을 구현해야 합니다.
 대표적인 웹 애플리케이션 서버로는 Apache Tomcat, Jetty, Microsoft IIS 등이 있습니다.
 
+> 톰캣 설치해보기  
+> https://tomcat.apache.org/  
+> 톰캣 10 버전 다운로드 (zip파일)  
+> JDK 다운로드 (버전 17)  
+> JAVA_HOME 환경변수 설정  
+> 톰캣 실행  
+> 이미지 올리기 (/myapp/img.jpg)
+
 ### 1-4. 최선의 선택 - 스프링
 
 풍부한 기능과 모듈화: 스프링 프레임워크는 다양한 기능과 모듈을 제공하여 백엔드 애플리케이션을 빠르고 효율적으로 개발할 수 있습니다. 예를 들어, 스프링 MVC를 사용하여 웹 애플리케이션을 구축하거나, 스프링 데이터를 사용하여 데이터베이스 액세스를 관리할 수 있습니다. 또한 스프링 시큐리티를 사용하여 인증 및 권한 부여를 처리할 수 있습니다.
