--- a/3_편의점프로젝트_1.md
+++ b/3_편의점프로젝트_1.md
@@ -56,12 +56,12 @@ public class AppConfig {
 그런데, 실행해봤더니 url을 치고 들어가도 response가 안온다.??   
 --> @Controller는 단순히 @Component(자동 빈 등록, 추후에 설명)를 포함하는 것을 넘어서, 스프링에게 클라이언트의 요청을 이쪽으로 보내게끔 유도함.  
 ==> 스프링 MVC는 @Controller로 표시된 클래스를 스프링 빈으로 인식하여 요청을 처리합니다. 따라서 컨트롤러가 빈으로 등록되지 않으면 해당 URL에 대한 요청을 처리할 수 없습니다.  
-
+===> @Controller  를 사용하자!!
 
 * 요청(Get, Post)을 매핑하자
 
 ```Java
-@GetMapping("/list")
+    @GetMapping("/list")
     public String list(Model model) {
         List<Item> items = itemService.findAllItems();
         model.addAttribute("items", items);
