--- a/2_스프링_핵심.md
+++ b/2_스프링_핵심.md
@@ -15,16 +15,19 @@
 
 
 ### 빈과 싱글톤
-- 빈이란 무엇인가
-- 싱글톤 패턴
-- 싱글톤의  장점
-  1. 성능 향상
-  2. 상태 공유
-  3. ....
+- 빈이란 무엇인가: 스프링 프레임워크에서 빈은 애플리케이션의 핵심 구성 요소로서, 스프링 IoC 컨테이너에 의해 생성, 관리되는 객체를 말합니다.
+이는 스프링의 느슨한 결합과 의존성 주입(Dependency Injection)을 가능하게 합니다.  
+- 싱글톤 패턴: 싱글톤 패턴은 애플리케이션 전체에서 단일 객체의 인스턴스만 존재하도록 보장하는 디자인 패턴입니다.
+스프링에서는 빈을 기본적으로 싱글톤으로 관리하며, 이는 각 빈에 대해 컨테이너가 단일 인스턴스를 생성하고 관리한다는 것을 의미합니다.  
+- 싱글톤의 장점:  
+    - 성능 향상: 여러 요청이 들어올 때마다 객체를 생성하는 비용이 들지 않으므로 애플리케이션의 성능이 향상됩니다.
+    - 상태 공유: 싱글톤으로 관리되는 객체는 애플리케이션 전반에 걸쳐 상태를 공유할 수 있어, 일관된 데이터를 유지하고 공유할 수 있습니다.
 
 - 스프링은 빈을 싱글톤으로 관리한다!
  스프링 컨테이너(DI 컨테이너)는 싱글톤 패턴을 따로 적용하지 않아도, 객체 인스턴스를 싱글톤으로 관리해 준다.
 
 ### 스프링 컨테이너와 빈
-- 빈 수동 등록 (Configuration.class)
-- 빈 자동 등록(@Component, @Service, ...)
+- 빈 수동 등록 (Configuration.class)  
+  빈의 수동 등록은 개발자가 직접 스프링 IoC 컨테이너에 빈을 등록하는 과정을 말합니다. 주로 XML, JavaConfig, 어노테이션 등을 사용하여 빈을 정의하고 등록할 수 있습니다. 이 방식은 빈의 생성과 의존성 관리를 명시적으로 제어할 수 있어야 할 때 유용합니다.
+- 빈 자동 등록(@Component, @Service, ...)  
+빈의 자동 등록은 스프링이 클래스 경로를 스캔하거나 특정 어노테이션을 기반으로 빈을 자동으로 검색하고 등록하는 기능입니다. 이를 통해 개발자는 빈을 명시적으로 등록하지 않고도 자동으로 빈을 관리할 수 있습니다. 주로 @Component, @Service, @Repository, @Controller 등의 어노테이션을 사용하여 빈을 자동으로 등록할 수 있습니다. 이 방식은 개발자가 빈 등록에 대한 부분적인 작업을 줄이고 코드를 간결하게 유지할 수 있도록 도와줍니다.
